# TemplateCMake

./: .gitmodules  CMakeLists.txt
.devcontainer/: .devcontainer.json  Dockerfile
apps/: CMakeLists.txt
apps/MyApplication/: CMakeLists.txt  main.cpp
cmake/: IPO.cmake  defaultBuildType.cmake  externSubmodules.cmake  subdirlist.cmake
components/: CMakeLists.txt
components/Library1/: CMakeLists.txt
components/Library1/src/: library1.cpp
docs/: Doxyfile.in
docs/html/: _version_8h.html  _version_8h.js  _version_8h_source.html  dir_14a3f3993f60b41a9daea25ea22f36a8.html  dir_14a3f3993f60b41a9daea25ea22f36a8.js  dir_409f97388efe006bc3438b95e9edef48.html  dir_409f97388efe006bc3438b95e9edef48.js  dir_625445af4d2f25c50a2aa11936e8938d.html  dir_625445af4d2f25c50a2aa11936e8938d.js  dir_7d18fc63cc152eb635037f37052c32a7.html  dir_7d18fc63cc152eb635037f37052c32a7.js  dir_9654b8d08f4bba4e84b362c5fd320bee.html  dir_9654b8d08f4bba4e84b362c5fd320bee.js  dir_bc6fa0a43171454b7eed798968349c22.html  dir_bc6fa0a43171454b7eed798968349c22.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_defs.html  globals_func.html  index.html  library1_8cpp.html  main_8cpp.html  navtreedata.js  navtreeindex0.js  test_8hpp.html  test_8hpp_source.html
docs/html/search/: all_1.js  defines_0.js  files_0.js  searchdata.js
install/x64-Debug/include/MyProject/: Version.h
install/x64-Debug/lib/: MyLibrary_lib.lib  gtest_main.lib
install/x64-Debug/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
tests/: CMakeLists.txt  test1.cpp
